# JPNotes

./: .env.example  .gitignore  DESIGN.md  README.md  docker-compose.build.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: cards.py  dict.py  exam.py  images.py  notes.py  review.py  stats.py  tags.py
backend/app/services/: cleanup.py  dictionary.py  furigana.py  srs.py
backend/scripts/: fetch_jamdict_db.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CardModal.tsx  KanjiPopover.tsx  SearchInput.tsx  TagInput.tsx
frontend/src/features/cards/: CardsListPage.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/exam/: ExamPage.tsx
frontend/src/features/notes/: NoteEditPage.tsx  NoteViewPage.tsx  NotesListPage.tsx
frontend/src/features/review/: ReviewPage.tsx
frontend/src/lib/: format.ts  markdown.ts  selection.ts  tts.ts
frontend/src/styles/: index.css
